--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,25 +1,20 @@
 server:
-  port: 9001
+  port: 8001
 spring:
-  application:
-    name: user-Server-RPCHTTP
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    virtual-host: heima121
-    username: heima121
-    password: heima121
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///springbootdb
+    url: jdbc:mysql://localhost:3306/springboot
     username: root
     password: root
+    #配置应用名称
+  application:
+    name: user-Server-RPCHTTP
+
+#配置eureka的请求信息
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://127.0.0.1:10086/eureka,http://127.0.0.1:10087/eureka
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
-sms:
-  ip: lisi
