--- a/user-dev.yml
+++ b/user-dev.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springboot
+    url: jdbc:mysql://localhost:3306/springcloud
     username: root
     password: root
     #配置应用名称
