--- a/user-dev.yml
+++ b/user-dev.yml
@@ -15,6 +15,11 @@ spring:
   virtual-host: itheima121
   username: itheima121
   password: itheima121
+ management: #暴露触发消息总线的地址
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh  
 #配置eureka的请求信息
 eureka:
   client:
