--- a/user-dev.yml
+++ b/user-dev.yml
@@ -6,7 +6,7 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    virtual-host: saas
+    virtual-host: /saas
     username: saas
     password: saas
   datasource:
