--- a/user-dev.yml
+++ b/user-dev.yml
@@ -11,7 +11,7 @@ spring:
     password: saas
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///springcloud
+    url: jdbc:mysql:///springboot
     username: root
     password: root
 eureka:
